--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/mobile/variables/app-header.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/mobile/variables/app-header.scss
@@ -1,6 +1,7 @@
 /* @theme: admin.oro; */
 
 $app-header-height:                             48px !default;
+$app-header-max-width:                          100% !default;
 $app-header-bg-color:                           $primary !default;
 $app-header-logo-text-color:                    $primary-inverse !default;
 $app-header-text-color:                         $primary-800 !default;
